<resources>
    <string name="app_name">Let\'s Get Out</string>
    <string name="action_settings">Settings</string>

    <string name="desc_menu_item_icon">Menu Item Icon</string>

    <!-- Navigation Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Current Balance</item>
        <item>Expenses and Savings</item>
        <item>Statistics</item>
    </string-array>

    <!-- Navigation Drawer Menu Icons -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_balance</item>
        <item>@drawable/ic_expenses</item>
        <item>@drawable/ic_statistics</item>
    </array>

    <!-- Home Quotes -->
    <string-array name="quotes">
        <item>The harder you work for something, the greater you\'ll feel when you achieve it.</item>
        <item>Stop wishing. Start doing.</item>
        <item>If \"Plan A\" didn\'t work. The alphabet has 25 more letters! Stay cool.</item>
        <item>Don\'t downgrade your dream just to fit your reality. Upgrade your conviction to match your destiny.</item>
        <item>If it is important to you, you will find a way. If not you\'ll find an excuse.</item>
        <item>In order to succeed, we must first believe that we can.</item>
        <item>Stay focused and never give up.</item>
        <item>Mistakes are proof that you are trying.</item>
        <item>Every accomplishment starts with the decision to try.</item>
        <item>Work hard. Dream big.</item>
    </string-array>

    <!-- Months array -->
    <string-array name="months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <!-- Years array -->
    <string-array name="years">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
    </string-array>

    <!-- Buttons -->
    <string name="button_set_up_goal">Set up new Goal</string>
    <string name="button_update_goal">Update Goal</string>
    <string name="button_set_target_date">Set Target Date</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_set_date">Set Date</string>
    <string name="button_get_my_settings">Get My Settings</string>
    <string name="button_simulate">Simulate</string>
    <string name="button_update">Update</string>
    <string name="button_change_date">Change Date</string>

    <!-- Hints -->
    <string name="hint_estimated_value">Estimated Value</string>
    <string name="hint_expense_name">Description</string>
    <string name="hint_value">Value</string>
    <string name="hint_description">Description</string>
    <string name="hint_target_date">Target Date</string>

    <!-- Text Views -->
    <string name="text_view_new_expense">New Expense</string>
    <string name="text_view_new_saving">New Saving</string>
    <string name="text_view_estimated_value">Estimated Value</string>
    <string name="text_view_achieved_value">Achieved Value</string>
    <string name="text_view_need_to_save">Need to Save</string>
    <string name="text_view_months_remaining">Months remaining</string>
    <string name="text_view_monthly_savings_expected">Monthly Savings Expected</string>
    <string name="text_view_months_expected">Months Expected</string>
    <string name="text_view_results">Results</string>
    <string name="text_view_target_date">Target Date</string>
    <string name="text_view_year_balance">Year Balance</string>

    <!-- Statistics Menu Icons -->
    <array name="statistics_icon_list">
        <item>@drawable/ic_simulation</item>
        <item>@drawable/ic_graph</item>
    </array>

    <!-- Statistics Menu Item Titles -->
    <string-array name="statistics_menu_item_title">
        <item>Simulation</item>
        <item>Graph</item>
    </string-array>
    
    <!-- Toolbar Titles -->
    <string name="toolbar_update_goal">Update Goal</string>
    <string name="toolbar_new_expense">New Expense</string>
    <string name="toolbar_new_saving">New Saving</string>
    <string name="toolbar_simulation">Simulation</string>
    <string name="toolbar_monthly_balance_list">Monthly Balance</string>
    <string name="toolbar_update_expense">Update Expense</string>
    <string name="toolbar_update_saving">Update Saving</string>

    <!-- Toast Messages -->
    <string name="toast_invalid_id">Invalid ID!!</string>
    <string name="toast_description_field_empty">The description field cannot be empty!</string>
    <string name="toast_value_field_empty">The value field cannot be empty!</string>
    <string name="toast_set_a_date">You need to set a date!</string>
    <string name="toast_new_expense_created">A new expense was successfully created!</string>
    <string name="toast_new_saving_created">New Saving created successfully!</string>
    <string name="toast_estimated_value_field_empty">You must insert a value!</string>
    <string name="toast_new_goal_created">A new goal was successfully created!</string>
    <string name="toast_current_goal_updated">Current Goal was successfully updated!</string>
    <string name="toast_expense_updated">The Expense Info was updated!</string>
    <string name="toast_saving_updated">The Saving Info was updated!</string>
    <string name="toast_anything_was_updated">You haven\'t updated anything!</string>

    <!-- Alert Dialog Messages -->
    <string name="alert_dialog_delete_message">Are you sure you want to delete this item?</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_delete_message_title">Delete item</string>

    <!-- Graph Labels -->
    <string name="label_expenses">Expenses</string>
    <string name="label_savings">Savings</string>

</resources>
