<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayoutSimulation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarSimulation"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBarLayoutSimulation"
        android:layout_marginTop="10dp"
        android:padding="10dp">


        <Button
            android:id="@+id/btGetMySettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/button_get_my_settings"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/button_text_color"/>

        <EditText
            android:id="@+id/simulation_etEstimatedValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btGetMySettings"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_estimated_value"
            android:textStyle="italic"
            android:textSize="@dimen/editText_text_size"/>

        <EditText
            android:id="@+id/simulation_etTargetDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/simulation_etEstimatedValue"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_target_date"
            android:textStyle="italic"
            android:textSize="@dimen/editText_text_size"/>

        <Button
            android:id="@+id/simulation_btSetTargetDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/simulation_etTargetDate"
            android:layout_marginTop="10dp"
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/button_set_target_date"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/button_text_color"/>

        <Button
            android:id="@+id/simulation_btSimulate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/simulation_btSetTargetDate"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:background="@drawable/custom_button"
            android:text="@string/button_simulate"
            android:textSize="@dimen/button_text_size"
            android:textColor="@color/button_text_color"/>


    </RelativeLayout>


</RelativeLayout>