<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/background_color">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayoutNewExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarNewExpense"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>

        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appBarLayoutNewExpense"
            android:layout_marginTop="40dp"
            android:padding="20dp">

            <TextView
                android:id="@+id/txtNewExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_new_expense"
                android:textSize="32sp"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/etExpenseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtNewExpense"
                android:layout_marginTop="50dp"
                android:hint="@string/hint_expense_name"
                android:textSize="22sp"
                android:textStyle="italic"/>

            <EditText
                android:id="@+id/etExpenseValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etExpenseName"
                android:layout_marginTop="10dp"
                android:hint="@string/hint_value"
                android:textSize="22sp"
                android:textStyle="italic"
                android:inputType="numberDecimal"/>

            <Button
                android:id="@+id/newExpense_btSetDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etExpenseValue"
                android:background="@drawable/custom_button"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/button_set_date"
                android:textColor="@color/button_text_color"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/newExpense_btConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newExpense_btSetDate"
                android:background="@drawable/custom_button"
                android:padding="10dp"
                android:layout_marginTop="50dp"
                android:text="@string/button_confirm"
                android:textColor="@color/button_text_color"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>



    </RelativeLayout>

</ScrollView>